# HandritiB

./: .env.example  .gitignore  CLAUDE.md  CLAUDE.md.new  UNIFIED_UPLOAD.md  drizzle.config.ts  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  vercel.json
.claude/: settings.local.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
BusinessCase/research/: 01-elevenlabs-scribe-v2.md  02-openrouter-api.md  03-fastapi-agent-architecture.md  04-railway-deployment.md  05-vercel-railway-coexistence.md  06-ux-patterns.md  07-tiered-architecture.md  08-new-feature-ideas.md  09-setup-checklist.md
app/: apple-icon.tsx  error.tsx  globals.css  icon.tsx  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
app/[locale]/: error.tsx  layout.tsx  not-found.tsx  page.tsx
app/admin/: AdminClient.tsx  page.tsx
backend/: .gitignore  Dockerfile  pyproject.toml  ruff.toml
backend/app/: auth.py  config.py  main.py
backend/app/models/: database.py  tables.py
backend/app/routers/: health.py
docs/: review.md
i18n/: config.ts
messages/: da.json  is.json  nb.json  sv.json
public/: manifest.webmanifest
scripts/: compare-providers.mjs  fetch-fixture.mjs  grandfather-users.mjs
tests/: client-components.test.ts  routes.test.ts  sse-consistency.test.ts  translations.test.ts  validate.test.ts
(+134 files in other folders)
